Colaboratory を使用して作成しました

--- a/python_lesson.ipynb
+++ b/python_lesson.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNfqq8VOhJ2zsy63WiRUWeE",
+      "authorship_tag": "ABX9TyPhvadhYJNIgv1PWDg3tZcR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B53TEmEZ-vXI",
-        "outputId": "416de917-3d92-4ae5-b7b6-661b49ce2b14"
+        "outputId": "8157e051-944a-4ad5-9672-130d3d405970"
       },
       "source": [
         "def hello():\n",
@@ -73,7 +73,7 @@
         "\n",
         "hello();"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-DjKFJwwOu71",
-        "outputId": "46039d3d-1721-43cc-ff47-5109e843460c"
+        "outputId": "33deab09-568b-40a6-a7bb-2f2dc9b9249e"
       },
       "source": [
         "class Hello:\n",
@@ -101,15 +101,15 @@
         "  def greet(self):\n",
         "    print('hello,' + self.name)\n",
         "\n",
-        "h = Hello('hoge')\n",
+        "h = Hello('world')\n",
         "h.greet()\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "hello,hoge\n"
+            "hello,world\n"
           ],
           "name": "stdout"
         }
@@ -194,6 +194,79 @@
             "division by zero\n",
             "<class 'ZeroDivisionError'>\n",
             "this is finally\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SvHwEPdEXsIe",
+        "outputId": "69929938-e73f-44fd-ebe0-98f25d1e2292"
+      },
+      "source": [
+        "a1 = [1, 2, 3]\n",
+        "\n",
+        "if (2 in a1):\n",
+        "  print('exists')\n",
+        "else:\n",
+        "  print('not exists')\n",
+        "\n",
+        "print('---')\n",
+        "\n",
+        "if (5 in a1):\n",
+        "  print('exists')\n",
+        "else:\n",
+        "  print('not exists')\n",
+        "\n",
+        "print('---')\n",
+        "\n",
+        "for val in a1:\n",
+        "  print(val)\n",
+        "  print(type(val))\n",
+        "\n",
+        "print('---')\n",
+        "\n",
+        "# intからstringへ変換\n",
+        "a2 = [str(val) for val in a1]\n",
+        "for val in a2:\n",
+        "  print(val)\n",
+        "  print(type(val))\n",
+        "\n",
+        "print('---')\n",
+        "\n",
+        "# 配列の結合\n",
+        "print(','.join(a2))\n",
+        "\n"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "exists\n",
+            "---\n",
+            "not exists\n",
+            "---\n",
+            "1\n",
+            "<class 'int'>\n",
+            "2\n",
+            "<class 'int'>\n",
+            "3\n",
+            "<class 'int'>\n",
+            "---\n",
+            "1\n",
+            "<class 'str'>\n",
+            "2\n",
+            "<class 'str'>\n",
+            "3\n",
+            "<class 'str'>\n",
+            "---\n",
+            "1,2,3\n"
           ],
           "name": "stdout"
         }
