Colaboratory を使用して作成しました

--- a/python_lesson.ipynb
+++ b/python_lesson.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPhvadhYJNIgv1PWDg3tZcR",
+      "authorship_tag": "ABX9TyONmEqrHKUWcbnYeV6ZuVK3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,7 +73,7 @@
         "\n",
         "hello();"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
         "h = Hello('world')\n",
         "h.greet()\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,7 +243,7 @@
         "print(','.join(a2))\n",
         "\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,6 +267,42 @@
             "<class 'str'>\n",
             "---\n",
             "1,2,3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1LiTURY3uiOw",
+        "outputId": "e23321b4-bf9c-405e-fe38-34efe837fb7e"
+      },
+      "source": [
+        "def outer():\n",
+        "  print('this is outer')\n",
+        "  def inner():\n",
+        "    print('this is inner')\n",
+        "\n",
+        "  inner()\n",
+        "\n",
+        "outer()\n",
+        "try:\n",
+        "  inner()\n",
+        "except:\n",
+        "  print('error!!')"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "this is outer\n",
+            "this is inner\n",
+            "error!!\n"
           ],
           "name": "stdout"
         }
